Review comment changes

--- a/src/components/SidebarError/SidebarError.scss
+++ b/src/components/SidebarError/SidebarError.scss
@@ -64,7 +64,7 @@
         display: flex;
         text-align: center;
         margin-bottom: 16px;
-        justify-content: flex-start;
+        justify-content: center;
         .sidebar-submit-button{
           margin-right: 16px;
         }
