--- a/public/web/viewer.css
+++ b/public/web/viewer.css
@@ -1082,7 +1082,7 @@
   --doorhanger-icon-opacity: 0.9;
 
   --main-color: var(--sa-neutral-color-5);
-  --body-bg-color: var(--sa-neutral-color-30-3);
+  --body-bg-color: var(--sa-neutral-color-30-2);
   --progressBar-percent: 0%;
   --progressBar-end-offset: 0;
   --progressBar-color: rgba(10, 132, 255, 1);
@@ -1091,7 +1091,7 @@
   --scrollbar-color: auto;
   --scrollbar-bg-color: auto;
   --toolbar-icon-bg-color: var(--sa-neutral-color-4);
-  --toolbar-icon-hover-bg-color: var(--sa-neutral-color-5);
+  --toolbar-icon-hover-bg-color: var(--sa-primary-color-4);
 
   --sidebar-narrow-bg-color: rgba(237, 237, 240, 0.9);
   --sidebar-toolbar-bg-color: rgba(245, 246, 247, 1);
@@ -1104,9 +1104,9 @@
     0 1px 0 rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.1);
   --toolbarSidebar-border-bottom: none;
   --button-hover-color: #1c211e1a;
-  --toggled-btn-color: var(--sa-neutral-color-5);
-  --toggled-btn-bg-color: rgba(0, 0, 0, 0.3);
-  --toggled-hover-active-btn-color: rgba(0, 0, 0, 0.4);
+  --toggled-btn-color: var(--sa-primary-color-4);
+  --toggled-btn-bg-color: rgba(28, 33, 30, 0.1);
+  --toggled-hover-active-btn-color: rgba(28, 33, 30, 0.15);
   --dropdown-btn-bg-color: rgba(215, 215, 219, 1);
   --dropdown-btn-border: none;
   --separator-color: rgba(0, 0, 0, 0.3);
@@ -1319,13 +1319,13 @@ body {
 }
 
 #sidebarContent {
-  top: 32px;
+  top: 0px;
   bottom: 0;
   inset-inline-start: 0;
   overflow: auto;
   position: absolute;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: var(--sa-neutral-color-30-3);
   box-shadow: inset calc(-1px * var(--dir-factor)) 0 0 rgba(0, 0, 0, 0.25);
 }
 
@@ -1411,6 +1411,7 @@ body {
   background-color: var(--sidebar-toolbar-bg-color);
   box-shadow: var(--toolbarSidebar-box-shadow);
   border-bottom: var(--toolbarSidebar-border-bottom);
+  display: none;
 }
 
 [dir="ltr"] #sidebarResizer {
@@ -2057,14 +2058,17 @@ body {
   color: var(--doorhanger-hover-color);
 }
 
-.toolbarButton.toggled,
-.splitToolbarButton.toggled > .toolbarButton.toggled,
+.toolbarButton.toggled.active,
+.toolbarButton.active,
+.splitToolbarButton.toggled > .toolbarButton.toggled.active,
+.splitToolbarButton.toggled > .toolbarButton.active,
 .secondaryToolbarButton.toggled {
   background-color: var(--toggled-btn-bg-color);
   color: var(--toggled-btn-color);
 }
 
-.toolbarButton.toggled::before,
+.toolbarButton.toggled.active::before,
+.toolbarButton.active::before,
 .secondaryToolbarButton.toggled::before {
   background-color: var(--toggled-btn-color);
 }
@@ -2306,17 +2310,17 @@ a.secondaryToolbarButton[href="#"] {
   mask-image: var(--toolbarButton-search-icon);
 }
 
-#referenceDetails::before {
+#referenceDetailsToolbarButton::before {
   -webkit-mask-image: var(--toolbarButton-reference-details-icon);
   mask-image: var(--toolbarButton-reference-details-icon);
 }
 
-#knowledgeGraph::before {
+#knowledgeGraphToolbarButton::before {
   -webkit-mask-image: var(--toolbarButton-knowledge-graph-icon);
   mask-image: var(--toolbarButton-knowledge-graph-icon);
 }
 
-#summary::before {
+#summaryToolbarButton::before {
   -webkit-mask-image: var(--toolbarButton-summary-icon);
   mask-image: var(--toolbarButton-summary-icon);
 }
