Added separate component for custom summary

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "./theme/typography.scss";
 
 /* PLOP_INJECT_IMPORT */
+@import '../components/CustomSummary/CustomSummary.scss';
 @import "../components/SupportedPaperList/SupportedPaperList.scss";
 @import "../components/Loader/Loader.scss";
 @import "../components/SidebarError/SidebarError.scss";
