--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 /* PLOP_INJECT_IMPORT */
 @import '../components/TitleClose/TitleClose.scss';
 @import '../components/CustomSummary/CustomSummary.scss';
+@import "../components/SidebarZoom/SidebarZoom.scss";
 @import "../components/SupportedPaperList/SupportedPaperList.scss";
 @import "../components/Loader/Loader.scss";
 @import "../components/SidebarError/SidebarError.scss";
