Changed font size for heading in title and close component

--- a/src/components/TitleClose/TitleClose.scss
+++ b/src/components/TitleClose/TitleClose.scss
@@ -5,8 +5,10 @@
     }
 
     .modal-title {
-      @include typographyMediumM;
-      color: var(--sa-upload-modal-title-text-color);
+      h2 {
+        @include typographyMediumS;
+        color: var(--sa-upload-modal-title-text-color);
+      }
     }
 
     .modal-close-button {
