Changed font size

--- a/src/components/TitleClose/TitleClose.scss
+++ b/src/components/TitleClose/TitleClose.scss
@@ -2,18 +2,18 @@
     .title-and-close-button {
       display: flex;
       justify-content: space-between;
+      align-items: center;
     }
 
     .modal-title {
       h2 {
-        @include typographyMediumS;
+        @include typographyMediumM;
         color: var(--sa-upload-modal-title-text-color);
       }
     }
 
     .modal-close-button {
       cursor: pointer;
-
       width: 24px;
       height: 24px;
     }
