--- a/src/components/KnowledgeGraph/KnowledgeGraph.scss
+++ b/src/components/KnowledgeGraph/KnowledgeGraph.scss
@@ -1,2 +1,18 @@
 .sa-knowledge-graph {
+  color: var(--sa-neutral-color-5);
+  padding: 16px;
+
+  h1 {
+    @include typographyMediumM;
+    margin-bottom: 16px;
+  }
+  .sa-knowledge-graph-wrapper {
+    height: 318px;
+    text-align: center;
+    background: var(--sa-neutral-color-2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+  }
 }
