--- a/src/components/Summary/Summary.scss
+++ b/src/components/Summary/Summary.scss
@@ -26,7 +26,8 @@
     .sa-summary-custom-text {
       background-color: var(--sa-neutral-color-2);
       margin-bottom: 8px;
-      h2, p {
+      h2,
+      p {
         margin-bottom: 8px;
         margin-left: 12px;
         margin-right: 12px;
