Added knowledge graph details in frontend

--- a/src/components/KnowledgeGraph/KnowledgeGraph.scss
+++ b/src/components/KnowledgeGraph/KnowledgeGraph.scss
@@ -8,19 +8,21 @@
   }
 
   .sa-knowledge-graph-wrapper {
-    .sa-knowledge-graph-details {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      h2 {
-        @include typographyMediumM;
-      }
+      .sa-knowledge-graph-details {
+        align-items: left;
+        h2 {
+          @include typographyMediumM;
+        }
     }
 
-    .sa-knowledge-graph-button {
-      margin-top: 8px;
-      margin-bottom: 8px;
-    }
+    .sa-knowledge-graph-button-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+        .sa-knowledge-graph-button {
+          margin-top: 8px;
+          margin-bottom: 8px;
+        }
+      }
   }
 }
