--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,8 +6,8 @@
 @import "../components/KnowledgeGraph/KnowledgeGraph.scss";
 @import "../components/TitleClose/TitleClose.scss";
 @import "../components/CustomSummary/CustomSummary.scss";
-@import '../components/TitleClose/TitleClose.scss';
-@import '../components/CustomSummary/CustomSummary.scss';
+@import "../components/TitleClose/TitleClose.scss";
+@import "../components/CustomSummary/CustomSummary.scss";
 @import "../components/SidebarZoom/SidebarZoom.scss";
 @import "../components/SupportedPaperList/SupportedPaperList.scss";
 @import "../components/Loader/Loader.scss";
