--- a/src/components/KnowledgeGraphModal/KnowledgeGraphModal.scss
+++ b/src/components/KnowledgeGraphModal/KnowledgeGraphModal.scss
@@ -19,7 +19,7 @@
 
   .sa-knowledge-graph-modal-wrapper {
     background-color: var(--sa-neutral-color-2);
-    width: fit-content;
+    width: 850px;
 
     margin: 175px auto;
 
