--- a/src/components/TitleClose/TitleClose.scss
+++ b/src/components/TitleClose/TitleClose.scss
@@ -9,6 +9,7 @@
     h2 {
       @include typographyMediumM;
       color: var(--sa-upload-modal-title-text-color);
+      margin: 0px;
     }
   }
 
