minor style fix on knowledge graph and summary

--- a/src/components/KnowledgeGraph/KnowledgeGraph.scss
+++ b/src/components/KnowledgeGraph/KnowledgeGraph.scss
@@ -10,6 +10,11 @@
   .sa-knowledge-graph-wrapper {
     .sa-knowledge-graph-details {
       align-items: left;
+
+      div {
+        margin-bottom: 4px;
+      }
+
       p {
         @include typographyRegularXs;
       }
