input text seperate component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "./theme/typography.scss";
 
 /* PLOP_INJECT_IMPORT */
+@import '../components/InputText/InputText.scss';
 @import "../components/KnowledgeGraphModal/KnowledgeGraphModal.scss";
 @import "../components/KnowledgeGraph/KnowledgeGraph.scss";
 @import "../components/TitleClose/TitleClose.scss";
