--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,8 @@
 @import "./theme/typography.scss";
 
 /* PLOP_INJECT_IMPORT */
+@import '../components/FeatureTooltipHandler/FeatureTooltipHandler.scss';
+@import '../components/FeatureTooltip/FeatureTooltip.scss';
 @import "../components/SupportedPaperList/SupportedPaperList.scss";
 @import "../components/Loader/Loader.scss";
 @import "../components/SidebarError/SidebarError.scss";
