fixed initial zooming into node, added autoamtic graph fitting when resizing

--- a/src/components/KnowledgeGraphModal/KnowledgeGraphModal.scss
+++ b/src/components/KnowledgeGraphModal/KnowledgeGraphModal.scss
@@ -43,6 +43,7 @@
       gap: 20px;
     }
     .sa-knowledge-graph-modal-node-details {
+      width: 35%;
       .sa-knowledge-graph-modal-node-buttons {
         display: flex;
         justify-content: center;
